syntax = "proto3";

import "error.proto";

message User {
  string id = 1;
  string deviceUniqueId = 2;
  string username = 3;
  int64 created = 4;
  string phoneNumber = 5;
  int64 phoneNumberVerifiedAt = 6;
}


message CreateUserRequest {
  string spanContext = 0;
  User user = 1;
}

message CreateUserResponse {
  StatusCode status = 1;
  repeated Error errors = 2;
  User user = 3;
}


message AuthUserRequest {
  string spanContext = 1;
  User user = 2;
}

message AuthUserResponse {
  StatusCode status = 1;
  repeated Error errors = 2;
  User user = 3;
}


service UserService {
  rpc AuthUser(AuthUserRequest) returns (AuthUserResponse) {}
}